syntax = "proto3";

option go_package = "alarm/";

package proto;

enum ThresholdType {
  values                  = 0;
  ratio                   = 1;
  trigger                 = 2;
}

enum ThresholdLevel {
  critical              = 0;
  major                 = 1;
  minor                 = 2;
  warning               = 3;
}

enum ThresholdName {
  cpuUsedRatio           = 0;
  memoryUsedRatio        = 1;
  storageUsedRatio       = 2;
  qps                    = 3;
  lps                    = 4;
  subnetUsedRatio        = 5;
  haTrigger              = 6;
  nodeOffline            = 7;
  dnsOffline             = 8;
  dhcpOffline            = 9;
  ipConflict             = 10;
  subnetConflict         = 11;
  illegalDhcp            = 12;
  ipBaseLineConflict     = 13;
}

message BaseThreshold {
  ThresholdName name                 = 1;
  ThresholdLevel level               = 2;
  ThresholdType type                 = 3;
}

message BaseAlarm {
  BaseThreshold base_threshold       = 1;
  string time                        = 2;
  bool send_mail                     = 3;
}

message NodeAlarm {
  BaseAlarm base_alarm                 = 1;
  string node_ip                       = 2;
}

message NodeHaAlarm {
  BaseAlarm base_alarm                 = 1;
  string ha_cmd                        = 2;
  string ha_role                       = 3;
  string master_ip                     = 4;
  string slave_ip                      = 5;
}

message MetricValueAlarm {
  BaseAlarm base_alarm                 = 1;
  string node_ip                       = 2;
  uint64 value                         = 3;
}

message SubnetRadioAlarm {
  BaseAlarm base_alarm                 = 1;
  string node_ip                       = 2;
  uint64 value                         = 3;
  string subnet                        = 4;
  uint64 threshold                     = 5;
}

message ConflictIpAlarm {
  BaseAlarm base_alarm                 = 1;
  string conflict_ip                   = 2;
  string conflict_ip_type              = 3;
}

message ConflictSubnetAlarm {
  BaseAlarm base_alarm                 = 1;
  string conflict_subnet               = 2;
}

message IllegalDhcpAlarm {
  BaseAlarm base_alarm                 = 1;
  string illegal_dhcp_ip               = 2;
  string illegal_dhcp_mac              = 3;
}

message IpBaseLineAlarm {
  BaseAlarm base_alarm                 = 1;
  string conflict_ip                   = 2;
  string conflict_mac                  = 3;
  string conflict_uplink_equipment     = 4;
  string conflict_uplink_port          = 5;
  string ip_base_line_mac              = 6;
  string ip_base_line_uplink_equipment = 7;
  string ip_base_line_uplink_port      = 8;
}

message AlarmResponse {
  bool success                         = 1;
  string message                       = 2;
}